Fixed possible bugs with text alignment

--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -9,12 +9,7 @@ h1 {
 	font-size: 50px;
 }
 
-a {
+p {
 	color: aquamarine;
-	font-size: 16px;
-	text-align: center;
-}
-
-.center {
-	margin: 0 auto;
+	font-size: 16px
 }
